--- a/client/package.json
+++ b/client/package.json
@@ -23,13 +23,13 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.8.0"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "nodemon": "^3.1.10"
+    "eslint-plugin-react": "^7.33.2"
   },
   "browserslist": {
     "production": [
@@ -45,3 +45,4 @@
   },
   "proxy": "http://localhost:5000"
 }
+
