--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "18.x"
+  }
 }
-
