--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint src --ext .js,.jsx",
     "eject": "react-scripts eject"
@@ -45,6 +45,6 @@
   },
   "proxy": "http://localhost:5000",
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
